--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <h2>About Me</h2>
 
-            <p> I'm in love with everything CS and strive to work on challenging problems. I also love to travel. I was born in Boston, Massachusetts after which I've lived in Chicago, San Jose and New Delhi. Scroll down to learn more about the things I've worked on.
+            <p> I'm a Software Engineer based in NYC who loves exploring new places. I was born in Boston and have lived in Singapore, Lucknow, Chicago, and Cupertino after which I went to high school in Noida. Scroll down to learn more about the projects I've worked on.
             </p>
 
             <div class="row">
@@ -216,15 +216,15 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
                   <h3>Amazon<img class="ctc"  src="images/Amazon.jpeg" alt="" /></h3>
                   <p class="info">Software Engineer <span>&bull;</span> <em class="date">October 2022 - Present</em></p>
                   <p>
-                     <span>&bull;</span> Part of the OMS team which is responsible for a system used to create ad campaigns.
+                     <span>&bull;</span> Part of the OMS team which is responsible for a system used to create advertising campaigns for clients.
 <br>
-<span>&bull;</span> Collaborated with a team member to successfully design and implement all required functionality to transition away from Salesforce for advertising campaigns exceeding $750k.
+<span>&bull;</span> Designed and implemented a custom Google Drive-like system from scratch along with another team member, closely working with and receiving constant feedback from the product team. This was part of a wider project which helped users manage advertising campaigns exceeding $750k directly from OMS.
 <br>
-<span>&bull;</span> Designed and implemented a custom Google Drive-like system from scratch, closely working with and receiving constant feedback from the product team.
+<span>&bull;</span> Collaborated closely with Amazon’s DSP team to build a widget in OMS which allowed users to push goals and optimization information for managed advertising campaigns to the DSP.
 <br>
-<span>&bull;</span> Developed the back end for the Google Drive-like system using Java, AWS S3, and AWS DynamoDB. Implemented the front end using JavaScript and React.
+<span>&bull;</span> Extended OMS’s campaign approval workflow to the EU region by adding additional stages and rules required for the region.
 <br>
-<span>&bull;</span> Successfully met the original tight deadline for the system despite a team member taking an unexpected medical leave by taking over and finishing their work along with mine.             
+<span>&bull;</span> Onboarded and mentored a new team member by giving her code walk throughs, planning initial tasks designed to help familiarize her with the code base, and setting up a recurring 1:1 to answer questions.     
                   </p>
 
                </div>
@@ -255,10 +255,8 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
                   <h3>Bloomberg L.P.<img class="ctc"  src="images/BB.png" alt="" /></h3>
                   <p class="info">Software Engineer <span>&bull;</span> <em class="date">August 2019 - September 2021</em></p>
                   <p>
-                     <span>&bull;</span> Identified bottlenecks by analyzing performance for different service configurations using a Jupyter notebook/Python.<br>
-                     <!--
-                     <span>&bull;</span> Leveraged existing optimizations (use of threads and fibers in C++ to effectively optimize an I/O bound workflow, redis caching etc.) and took into account considerations such as network load on downstream services to design solutions for increasing service throughput.<br>
-                 	 -->
+                     <span>&bull;</span> Worked on the AIM OTE team which built the frontend and backend for the entry points to Bloomberg’s buy-side portfolio management solutions.<br>
+                     <span>&bull;</span> Identified bottlenecks by analyzing performance of our main service for different service configurations (number of threads, instances etc) under various loads<br>
                      <span>&bull;</span> Helped <strong>increase the throughput of our main I/O bound C++17 service 3x</strong> by reducing slow service calls.<br>
                      <span>&bull;</span> Contributed to a dashboard for monitoring service throughput.<br>
                      <span>&bull;</span> Gained a lot of experience in debugging legacy C++ services through quarterly sprint long rotations where I was responsible for all incoming client bugs.<br>
@@ -277,7 +275,7 @@ Deep Learning Specialization - Convolutional Neural Networks (Coursera) - <a hre
                   <h3>Chicago Trading Company <img class="ctc"  src="images/CTC.png" alt="" /></h3>
                   <p class="info">Software Engineering Intern <span>&bull;</span> <em class="date">June 2018 - August 2018</em></p>
                   <p>
-                     <span>&bull;</span> Gained an in depth knowledge of options through an intensive one week course during the first week of my internship. <br>
+                     <span>&bull;</span> Learnt about options pricing theory during an intensive one week course during the first week of my internship. <br>
                      <span>&bull;</span> Solely responsible for building a vital application for traders in <strong>Java</strong>. The application displayed information to the traders which was crucial for making decisions about CTC's markets. Traders were very excited to use the application and it was put into production by the end of my internship. <br>
                      <span>&bull;</span> The project consisted of a backend where information was gathered and certain values were calculated and a UI which displayed the infomation to the traders using heatmaps. <br>
                      <span>&bull;</span> The project helped me learn about the best practices for writing <strong>event driven applications in Java</strong>. I used <strong>Google Proto Buffers, Java Immutables Library, Java Swing, Netty, Git, Gerrit </strong> and <strong>Jenkins</strong> as well as CTC's internal tools and frameworks.<br>
@@ -346,9 +344,10 @@ The objective of Project Chaap is to empower women socially and economically by 
             <div class="row item">
 
                <div class="twelve columns">
-                  <p> I enjoy the thrill of competing in competitive programming contests. I actively participated in the long challenges hosted on Codechef every month. I love participating in contests such as Google Code Jam, Google Kickstart, Facebook Hackercup, and Codechef Snackdown as well as challenges on Hackerrank, Leetcode, Hackereath and Codeforces in my free time. I primarily use <strong>C++</strong> while participating in contests. Some of my competitive programming profiles and achievements are listed below.<br>
-                     <span>&bull;</span><a href="https://www.codechef.com/users/utkarsh1303">Codechef (USA Rank 258)</a><br>
-                     <span>&bull;</span><a href="https://www.hackerrank.com/utkarsh1303?hr_r=1">Hackerrank (OpenBracket Delaware - Rank 74 - Invited to Onsite Round in Wilmington, Delaware)</a><br>
+                  <p> During my undergrad, I actively participated in the long challenges hosted on Codechef every month. I primarily use <strong>C++</strong> while participating in contests. Some of my competitive programming profiles and achievements are listed below.<br>
+                     <span>&bull;</span><a href="https://www.codechef.com/users/utkarsh1303">Rating: 1688, Codechef</a><br>
+                     <span>&bull;</span><a href="https://www.hackerrank.com/results/openbracket-2017/utkarsh1303">Rank 74/2811, OpenBracket Delaware - Invited to Onsite Round</a><br>
+                     <span>&bull;</span><a href="https://www.codechef.com/certificates/public/cc58f7c9f96227cd1023c9cccf9960ea">Rank 615/11390, Codechef SNCKPB17</a><br>
 <span>&bull;</span><a href="https://code.google.com/codejam/contest/4374486/scoreboard#sp=241">Google Kickstart Practice Round 2018 - Rank 260</a><br>
                   </p>
                </div>
@@ -390,13 +389,16 @@ The objective of Project Chaap is to empower women socially and economically by 
    <section id="portfolio">
       <div>
             <h1>Cool Stuff I've Worked On</h1>
+            <h3>Meshiagare - Restaurant Suggestions for Groups Using AI</h3><br>
+            <h1><video width="60%" height="55%" controls>
+               <source src="images/MeshiagareDemo.mp4" type="video/mp4">
+            </video></h1><p class="x">I developed a web app that helps groups find new restaurants catering to everyone's preferences, using <strong>Anthropic's Claude Haiku</strong> and <strong>Perplexity's online LLM API</strong>. As shown in the demo above, a user can log in and set up a profile with their location and preferences/dietary restrictions. They can then create a chat with their friends in which they specify the location, price range and preferences/restrictions (which are initially populated with each member’s preferences) for the group. After this, each member of the group can individually chat with the AI which takes the group preferences into account while responding with personalized suggestions to each individual member. To suggest something to the wider group, the user can click on the suggestions within the response and a pin with their profile picture pops up on the adjacent map which can be seen by everyone else. User’s can click on the pins to learn more about the restaurant and assign ranks to their top choices. The idea is to make the whole process as simple as possible while still enabling individual creativity.
+
+I use Claude Haiku to craft a search query to Perplexity’s online LLM API given the group’s preferences, a summary of the conversation so far and the latest prompt from the user. Another instance of Claude Haiku then parses Perplexity’s response into JSON and provides an updated summary of the conversation. The app was built using NextJS, Vercel, Typescript, and Tailwind CSS.<br><a href="https://meshiagare.vercel.app">Meshiagare</a><br><a href="https://github.com/utkarshj1303/meshiagare">Github Repository</a></p><br>
             <h3>Stereo Visual Odometry</h3><br>
             <h1><video width="60%" height="55%" controls>
                <source src="images/demoVideo.mp4" type="video/mp4">
             </video></h1><p class="x">Chirayu Garg and I implemented a variation of the algorithm described in the paper Howard, Andrew. “Real-time stereo visual odometry for autonomous ground vehicles.” (<a href="https://ieeexplore.ieee.org/document/4651147/">2008 IEEE/RSJ International Conference on Intelligent Robots and Systems (2008)</a>) using <strong>Python</strong> and OpenCV 3.0. The aim of the project was to plot the trajectory of a moving vehicle using a sequence of images captured by a camera on top of the vehicle. The demo video above shows the trajectory plotted by our algorithm for the vehicle shown on the right.<br><a href="https://github.com/utkarshj1303/Stereo-Visual-Odometry-Plotting-An-Objects-Trajectory-Using-A-Sequence-Of-Images">Github Repository</a></p><br>
-         <h3>Art Generation with Neural Style Transfer</h3><br>
-            <h1 style="width: 80%;margin: auto;"><img src="images/StyleTransfer.png"><h1>
-            </h1><p class="x">One of the many cool things I learned in the Convolutional Neural Networks course on Coursera was how to use use neural networks to transfer the style of one image onto another.<br><a href="https://github.com/utkarshj1303/Art-Generation-with-Neural-Style-Transfer-Coursera-Deep-Learning-Convolutional-Neural-Networks">Github Repository</a></p>
          <h3>Academic Advisor</h3><br> 
              <div style = "width: 80%; margin-left: 20%;" class="container">
         <h2  style="width: 35%;"><img src="images/AcadAdvisor.png"></h2>
@@ -405,6 +407,9 @@ The objective of Project Chaap is to empower women socially and economically by 
             </video>
     </div>
 <p class="x">My proposal for an Android application that helps the students of UW-Madison choose courses that align with their interests and fulfill the degree requirements of their major was chosen as one of the top 20 projects out of 130 and was developed by me and team of students in CS 506. Academic Advisor is an Android application that aggregates data from the UW Course Guide, Rate My Professors and UW Madison Course Grade Distribution. The app generates a list of courses based on the users selected range of professor rating, range of average gpa and L&S requirement which they wish to satisfy. This was submitted as the final project for UW - Madison's CS 506 Software Engineering course. The project consists of an Android application and a server which starts the scrapers and then stores the scraped data in a database which the Android application then queries. A major part of my work on the project was developing the scrapers for Rate My Professors and the UW Madison Course Guide. I wrote the Course Guide Scraper in <strong>Python</strong> and the Rate My Professors scraper in <strong>Java</strong>. <strong>The video above shows my Course Guide scraper in action. It automatically opens the Course Guide page, goes through the list of subjects and scrapes the information from the page and stores it in JSON format. The pictures to the left of the video are screenshots of the final Android application.</strong><br><a href="https://github.com/utkarshj1303/Academic-Advisor">Github Repository</a></p>
+         <h3>Art Generation with Neural Style Transfer</h3><br>
+            <h1 style="width: 80%;margin: auto;"><img src="images/StyleTransfer.png"><h1>
+            </h1><p class="x">One of the many cool things I learned in the Convolutional Neural Networks course on Coursera was how to use use neural networks to transfer the style of one image onto another.<br><a href="https://github.com/utkarshj1303/Art-Generation-with-Neural-Style-Transfer-Coursera-Deep-Learning-Convolutional-Neural-Networks">Github Repository</a></p>
          <h3>Image Classifier For Healthy And Retinopathy Retinas</h3><br>
             <h1 style="width: 80%;margin: auto;"><img src="images/RetinopathyClassifier.png"><h1>
             </h1><p class="x">For my final project in CS 567 Medical Image Analysis, I implemented a classifier in <strong>MATLAB</strong> that differentiates between healthy and retinopathy retinas. I used various image analysis techniques to extract features unique to the retinopathy retinas and then used KNN and Logistic Regression for cross validation.<br><a href="https://github.com/utkarshj1303/Image-Classifier-For-Healthy-And-Retinopathy-Retinas">Github Repository</a></p>
